--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ repositories {
 
 dependencies {
     compile 'org.seleniumhq.selenium:selenium-server:3.11.0'
+    compile 'log4j:log4j:1.2.17'
 
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
